apollo-federation/src/sources/connect/json_selection/snapshots/apollo_federation__sources__connect__json_selection__parser__tests__conditional_selections.snap
---
source: apollo-federation/src/sources/connect/json_selection/parser.rs
expression: "selection!(r#\"\n            ... if (kind->eq(\"book\")) {\n                isbn\n                title\n                author { name }\n            }\n            \"#)"
---
Named(
    SubSelection {
        selections: [
            Spread(
                WithRange {
                    node: ConditionalTest {
                        test: WithRange {
                            node: Path(
                                PathSelection {
                                    path: WithRange {
                                        node: Key(
                                            WithRange {
                                                node: Field(
                                                    "kind",
                                                ),
                                                range: Some(
                                                    21..25,
                                                ),
                                            },
                                            WithRange {
                                                node: Method(
                                                    WithRange {
                                                        node: "eq",
                                                        range: Some(
                                                            27..29,
                                                        ),
                                                    },
                                                    Some(
                                                        MethodArgs {
                                                            args: [
                                                                WithRange {
                                                                    node: String(
                                                                        "book",
                                                                    ),
                                                                    range: Some(
                                                                        30..36,
                                                                    ),
                                                                },
                                                            ],
                                                            range: Some(
                                                                29..37,
                                                            ),
                                                        },
                                                    ),
                                                    WithRange {
                                                        node: Empty,
                                                        range: Some(
                                                            37..37,
                                                        ),
                                                    },
                                                ),
                                                range: Some(
                                                    25..37,
                                                ),
                                            },
                                        ),
                                        range: Some(
                                            21..37,
                                        ),
                                    },
                                },
                            ),
                            range: Some(
                                21..37,
                            ),
                        },
                        when_true: SubSelection {
                            selections: [
                                Field(
                                    None,
                                    WithRange {
                                        node: Field(
                                            "isbn",
                                        ),
                                        range: Some(
                                            57..61,
                                        ),
                                    },
                                    None,
                                ),
                                Field(
                                    None,
                                    WithRange {
                                        node: Field(
                                            "title",
                                        ),
                                        range: Some(
                                            78..83,
                                        ),
                                    },
                                    None,
                                ),
                                Field(
                                    None,
                                    WithRange {
                                        node: Field(
                                            "author",
                                        ),
                                        range: Some(
                                            100..106,
                                        ),
                                    },
                                    Some(
                                        SubSelection {
                                            selections: [
                                                Field(
                                                    None,
                                                    WithRange {
                                                        node: Field(
                                                            "name",
                                                        ),
                                                        range: Some(
                                                            109..113,
                                                        ),
                                                    },
                                                    None,
                                                ),
                                            ],
                                            range: Some(
                                                107..115,
                                            ),
                                        },
                                    ),
                                ),
                            ],
                            range: Some(
                                39..129,
                            ),
                        },
                        when_else: None,
                        range: Some(
                            17..129,
                        ),
                    },
                    range: Some(
                        13..129,
                    ),
                },
            ),
        ],
        range: Some(
            13..129,
        ),
    },
)
