apollo-federation/src/sources/connect/json_selection/snapshots/apollo_federation__sources__connect__json_selection__parser__tests__error_snapshots-2.snap
---
source: apollo-federation/src/sources/connect/json_selection/parser.rs
expression: "JSONSelection::parse(\"$bogus\")"
---
Err(
    JSONSelectionParseError {
        message: "Unknown variable",
        fragment: "$bogus",
        offset: 0,
    },
)
