apollo-federation/src/sources/connect/json_selection/snapshots/apollo_federation__sources__connect__json_selection__parser__tests__error_snapshots-3.snap
---
source: apollo-federation/src/sources/connect/json_selection/parser.rs
expression: "JSONSelection::parse(\"id $.object\")"
---
Err(
    JSONSelectionParseError {
        message: "Named path selection must either begin with alias or ..., or end with subselection",
        fragment: "$.object",
        offset: 3,
    },
)
