apollo-federation/src/sources/connect/json_selection/snapshots/apollo_federation__sources__connect__json_selection__parser__tests__error_snapshots.snap
---
source: apollo-federation/src/sources/connect/json_selection/parser.rs
expression: "JSONSelection::parse(\".data\")"
---
Err(
    JSONSelectionParseError {
        message: "Key paths cannot start with just .key (use $.key instead)",
        fragment: ".data",
        offset: 0,
    },
)
